--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "npm run test:unit",
     "vmock": "vue-cli-service vmock"
   },
-  "main": "dist/v-{{name}}.min.js",
+  "main": "dist/{{name}}.min.js",
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
